feat: add colors constants

--- a/coffee-house/src/sass/style.scss
+++ b/coffee-house/src/sass/style.scss
@@ -1,5 +1,6 @@
 // abstracts
 @import "abstracts/mixins";
 @import "abstracts/placeholders";
+@import "abstracts/constants";
 // base
 @import "base/base"
