--- a/coffee-house/src/sass/abstracts/_constants.scss
+++ b/coffee-house/src/sass/abstracts/_constants.scss
@@ -11,3 +11,8 @@ $color-background-backdrop: #403F3DCC; /*80% opacity */
 // border colors
 $color-border-light: #C1B6AD;
 $color-border-dark: #665F55;
+
+// content width
+$content-width: 1440px;
+$tablet-width: 768px;
+$mobile-small-width: 380px;
