--- a/coffee-house/src/sass/abstracts/_mixins.scss
+++ b/coffee-house/src/sass/abstracts/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin font ($size, $height: $size * 1.05, $weight: 600, $style: normal, $line-height) {
+@mixin font ($size, $height: $size, $weight: 600, $style: normal, $line-height) {
     font-size: $size;
     font-style: $style;
     font-weight: $weight;
