--- a/coffee-house/src/sass/base/_base.scss
+++ b/coffee-house/src/sass/base/_base.scss
@@ -4,4 +4,17 @@ html {
 
 body {
     @extend %font-inter;
+    @include font($size: 1.6rem, $weight: 400, $line-height: 150%);
+}
+
+h1 {
+    @include font($size: 7.2rem, $weight: 600, $line-height: 105%);
+}
+
+h2 {
+    @include font($size: 6rem, $weight: 600, $line-height: 125%);
+}
+
+h3 {
+    @include font($size: 2.4rem, $weight: 600, $line-height: 125%);
 }
