feat: add wrapper

--- a/coffee-house/src/sass/style.scss
+++ b/coffee-house/src/sass/style.scss
@@ -3,4 +3,6 @@
 @import "abstracts/placeholders";
 @import "abstracts/constants";
 // base
-@import "base/base"
+@import "base/base";
+// layout
+@import "layout/wrapper";
