--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -12,6 +12,7 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: 150%;
+  background-color: #E1D4C9;
 }
 
 h1 {
@@ -38,6 +39,11 @@ h3 {
 .wrapper {
   max-width: 1440px;
   margin: auto;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
 }
 
 /*# sourceMappingURL=style.css.map */
