--- a/coffee-house/src/sass/base/_base.scss
+++ b/coffee-house/src/sass/base/_base.scss
@@ -5,6 +5,8 @@ html {
 body {
     @extend %font-inter;
     @include font($size: 1.6rem, $weight: 400, $line-height: 150%);
+
+    background-color: $color-background-body;
 }
 
 h1 {
