--- a/coffee-house/src/sass/base/_base.scss
+++ b/coffee-house/src/sass/base/_base.scss
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html {
     font-size: 10px;
 }
@@ -7,6 +11,8 @@ body {
     @include font($size: 1.6rem, $weight: 400, $line-height: 150%);
 
     background-color: $color-background-body;
+
+    color: $color-text-dark;
 }
 
 h1 {
@@ -19,4 +25,8 @@ h2 {
 
 h3 {
     @include font($size: 2.4rem, $weight: 600, $line-height: 125%);
+}
+
+.text-link, .button-link {
+    @include font($size: 1.6rem, $weight: 600, $line-height: 150%);
 }
