--- a/coffee-house/src/sass/layout/_header.scss
+++ b/coffee-house/src/sass/layout/_header.scss
@@ -1,4 +1,17 @@
 .header{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
+}
+
+.header__menu-link {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 8px;
+}
+
+.menu-link__icon {
+    display: block;
 }
