--- a/coffee-house/src/sass/style.scss
+++ b/coffee-house/src/sass/style.scss
@@ -5,8 +5,10 @@
 // base
 @import "base/base";
 @import "base/normalize";
+@import "base/buttons";
 // layout
 @import "layout/wrapper";
 @import "layout/header";
 // components
 @import "components/navigation";
+@import "components/enjoy"
