--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -25,6 +25,11 @@ h1 {
   font-style: normal;
   font-weight: 600;
   line-height: 105%;
+  color: #E1D4C9;
+}
+h1 span {
+  font-style: italic;
+  color: #B0907A;
 }
 
 h2 {
@@ -82,6 +87,7 @@ main {
  */
 h1 {
   font-size: 7.2rem;
+  margin: 0;
 }
 
 /* Grouping content
@@ -356,6 +362,26 @@ template {
   display: none;
 }
 
+.button {
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 150%;
+  color: #403F3D;
+}
+
+.button_primary {
+  width: 200px;
+  padding: 20px 78px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  background-color: #E1D4C9;
+  border: none;
+  border-radius: 100px;
+}
+
 .wrapper {
   max-width: 1440px;
   margin: auto;
@@ -367,6 +393,7 @@ template {
   justify-content: space-between;
   align-items: center;
   align-self: stretch;
+  margin-bottom: 20px;
 }
 
 .header__menu-link {
@@ -396,6 +423,34 @@ template {
 .navigation__link a {
   text-decoration: none;
   color: #403F3D;
+}
+
+.enjoy {
+  max-width: 1360px;
+  padding: 100px;
+  border-radius: 40px;
+  background-image: url("/src/img/img-enjoy.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
+.enjoy__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  align-self: stretch;
+  gap: 25px;
+  width: 530px;
+}
+
+.enjoy__container p {
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  color: #E1D4C9;
 }
 
 /*# sourceMappingURL=style.css.map */
