--- a/coffee-house/src/sass/layout/_header.scss
+++ b/coffee-house/src/sass/layout/_header.scss
@@ -3,6 +3,8 @@
     justify-content: space-between;
     align-items: center;
     align-self: stretch;
+
+    margin-bottom: 20px;
 }
 
 .header__menu-link {
