--- a/coffee-house/src/sass/layout/_enjoy.scss
+++ b/coffee-house/src/sass/layout/_enjoy.scss
@@ -5,10 +5,12 @@
 
     border-radius: 40px;
 
-    background-image: url('/src/img/img-enjoy.jpg');
+    background-image: url('/assets/img/img-enjoy.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
+
+    margin-bottom: 100px;
 }
 
 .enjoy__container{
