--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -33,6 +33,7 @@ h1 span {
 }
 
 h2 {
+  margin: 0;
   text-align: center;
   font-size: 6rem;
   font-style: normal;
@@ -423,8 +424,10 @@ template {
 
 .favourites-coffee {
   display: flex;
-  text-align: center;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  gap: 40px;
 }
 
 .navigation__list {
@@ -463,6 +466,78 @@ template {
   background-color: #E1D4C9;
   border: none;
   border-radius: 100px;
+}
+
+.carousel {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 50px;
+}
+
+.carousel__slide {
+  display: block;
+}
+
+.carousel__container {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.carousel__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 480px;
+}
+
+.carousel__img {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.carousel__describe {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  text-align: center;
+}
+
+.carousel__name-item {
+  font-size: 2.4rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 125%;
+}
+
+.carousel__price-item {
+  font-size: 2.4rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 125%;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
+
+.pagination__stick {
+  display: block;
+  width: 40px;
+  height: 4px;
+  border-radius: 100px;
+  background-color: #C1B6AD;
+}
+
+.pagination__stick_active {
+  background-color: #665F55;
 }
 
 /*# sourceMappingURL=style.css.map */
