--- a/coffee-house/src/sass/layout/_favourites-coffee.scss
+++ b/coffee-house/src/sass/layout/_favourites-coffee.scss
@@ -1,5 +1,7 @@
 .favourites-coffee {
     display: flex;
-    text-align: center;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    gap: 40px;
 }
