--- a/coffee-house/src/sass/style.scss
+++ b/coffee-house/src/sass/style.scss
@@ -13,3 +13,5 @@
 // components
 @import "components/navigation";
 @import "components/buttons";
+@import "components/carousel";
+@import "components/pagination";
