feat: add about section

--- a/coffee-house/src/sass/style.scss
+++ b/coffee-house/src/sass/style.scss
@@ -10,6 +10,7 @@
 @import "layout/header";
 @import "layout/enjoy";
 @import "layout/favourites-coffee";
+@import "layout/about";
 // components
 @import "components/navigation";
 @import "components/buttons";
