--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -428,6 +428,64 @@ template {
   justify-content: center;
   align-items: center;
   gap: 40px;
+  margin-bottom: 100px;
+}
+
+.about h2 {
+  text-align: left;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 40px;
+}
+
+.about__container-img {
+  display: grid;
+  gap: 40px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: minmax(118px, auto);
+}
+
+.about__container-img-item {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+  border-radius: 20px;
+}
+
+.about__container-img-item:nth-child(1) {
+  background-image: url("/assets/img/about-1.jpg");
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 5;
+}
+
+.about__container-img-item:nth-child(2) {
+  background-image: url("/assets/img/about-2.jpg");
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 5;
+  grid-row-end: 8;
+}
+
+.about__container-img-item:nth-child(3) {
+  background-image: url("/assets/img/about-3.jpg");
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 4;
+}
+
+.about__container-img-item:nth-child(4) {
+  background-image: url("/assets/img/about-4.jpg");
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 4;
+  grid-row-end: 8;
 }
 
 .navigation__list {
