--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -440,6 +440,7 @@ template {
   flex-direction: column;
   justify-content: center;
   gap: 40px;
+  margin-bottom: 95px;
 }
 
 .about__container-img {
@@ -488,6 +489,44 @@ template {
   grid-row-end: 8;
 }
 
+.mobile-app {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
+}
+
+.mobile-app h2 {
+  text-align: left;
+}
+
+.mobile-app__img {
+  display: block;
+}
+
+.mobile-app__describe {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.mobile-app__describe p {
+  margin: 0;
+}
+
+.mobile-app__button-container {
+  display: flex;
+  gap: 20px;
+}
+
+.mobile-app__button-name-container div:first-child {
+  text-align: left;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%;
+}
+
 .navigation__list {
   padding-left: 0;
   display: flex;
@@ -524,6 +563,17 @@ template {
   background-color: #E1D4C9;
   border: none;
   border-radius: 100px;
+}
+
+.button_app {
+  display: flex;
+  width: 200px;
+  padding: 12px 20px;
+  align-items: center;
+  gap: 8px;
+  border-radius: 100px;
+  border: 1px solid #665F55;
+  background-color: #E1D4C9;
 }
 
 .carousel {
