--- a/coffee-house/src/sass/layout/_about.scss
+++ b/coffee-house/src/sass/layout/_about.scss
@@ -6,6 +6,8 @@
     flex-direction: column;
     justify-content: center;
     gap: 40px;
+
+    margin-bottom: 95px;
 }
 .about__container-img {
     display: grid;
