--- a/coffee-house/src/sass/style.scss
+++ b/coffee-house/src/sass/style.scss
@@ -11,6 +11,7 @@
 @import "layout/enjoy";
 @import "layout/favourites-coffee";
 @import "layout/about";
+@import "layout/mobile-app";
 // components
 @import "components/navigation";
 @import "components/buttons";
