--- a/coffee-house/src/sass/layout/_mobile-app.scss
+++ b/coffee-house/src/sass/layout/_mobile-app.scss
@@ -3,6 +3,8 @@
     align-items: center;
     justify-content: center;
     gap: 100px;
+
+    margin-bottom: 100px;
 }
 .mobile-app h2 {
     text-align: left;
