--- a/coffee-house/src/sass/style.scss
+++ b/coffee-house/src/sass/style.scss
@@ -12,6 +12,7 @@
 @import "layout/favourites-coffee";
 @import "layout/about";
 @import "layout/mobile-app";
+@import "layout/footer";
 // components
 @import "components/navigation";
 @import "components/buttons";
