--- a/coffee-house/src/sass/layout/_header.scss
+++ b/coffee-house/src/sass/layout/_header.scss
@@ -7,6 +7,10 @@
     margin-bottom: 20px;
 }
 
+.header__link-logo {
+    display: block;
+}
+
 .header__menu-link {
     display: flex;
     justify-content: center;
@@ -16,4 +20,10 @@
 
 .menu-link__icon {
     display: block;
+}
+
+.header__menu-link-wrapper {
+    text-decoration: none;
+    color: $color-text-dark;
+    @include font($size: 1.6rem, $weight: 600, $line-height: 150%);
 }
