--- a/coffee-house/src/sass/style.scss
+++ b/coffee-house/src/sass/style.scss
@@ -13,6 +13,7 @@
 @import "layout/about";
 @import "layout/mobile-app";
 @import "layout/footer";
+@import "layout/menu-section";
 // components
 @import "components/navigation";
 @import "components/buttons";
