--- a/coffee-house/src/sass/layout/_wrapper.scss
+++ b/coffee-house/src/sass/layout/_wrapper.scss
@@ -3,3 +3,9 @@
     margin: auto;
     padding: 20px 40px;
 }
+
+.wrapper-menu {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
