feat: add h1 and tags

--- a/coffee-house/src/sass/layout/_header.scss
+++ b/coffee-house/src/sass/layout/_header.scss
@@ -18,6 +18,10 @@
     gap: 8px;
 }
 
+.header__menu-link_active {
+    border-bottom: 2px solid $color-background-backdrop;
+}
+
 .menu-link__icon {
     display: block;
 }
