--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -399,6 +399,10 @@ template {
   gap: 8px;
 }
 
+.header__menu-link_active {
+  border-bottom: 2px solid rgba(64, 63, 61, 0.8);
+}
+
 .menu-link__icon {
   display: block;
 }
@@ -555,6 +559,10 @@ template {
   border-radius: 40px;
 }
 
+.footer-menu {
+  flex-shrink: 0;
+}
+
 .footer h2 {
   text-align: left;
   color: #E1D4C9;
@@ -615,8 +623,61 @@ template {
   flex: 1;
 }
 
-.footer-menu {
-  flex-shrink: 0;
+.menu h1 {
+  color: #403F3D;
+  text-align: center;
+  font-size: 6rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 125%;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.menu__tags-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.menu__tag {
+  padding: 8px 16px 8px 8px;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 150%;
+  color: #403F3D;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border: 1px solid #C1B6AD;
+  border-radius: 100px;
+}
+
+.menu__tag-icon {
+  display: block;
+}
+
+.menu__tag-icon-wrapper {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  padding: 3px 7px;
+  justify-content: center;
+  align-items: center;
+  background-color: #C1B6AD;
+  border-radius: 50%;
+}
+
+.menu__tag_active {
+  background-color: #665F55;
+  color: #E1D4C9;
 }
 
 .navigation__list {
