--- a/coffee-house/src/sass/layout/_menu-section.scss
+++ b/coffee-house/src/sass/layout/_menu-section.scss
@@ -2,6 +2,59 @@
     flex: 1;
 }
 
-.footer-menu {
-    flex-shrink: 0;
+.menu h1 {
+    color: $color-text-dark;
+    text-align: center;
+
+    @include font($size: 6rem, $weight: 600, $line-height: 125%);
+}
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.menu__tags-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+}
+
+.menu__tag {
+    padding: 8px 16px 8px 8px;
+
+    @include font($size: 1.6rem, $weight: 600, $line-height: 150%);
+    color: $color-text-dark;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+
+    border: 1px solid $color-border-light;
+    
+    border-radius: 100px;
+}
+.menu__tag-icon {
+    display: block;
+}
+.menu__tag-icon-wrapper {
+    width: 30px;
+    height: 30px;
+
+    display: flex;
+    padding: 3px 7px;
+    justify-content: center;
+    align-items: center;
+
+    background-color: $color-border-light;
+
+    border-radius: 50%;
+}
+
+.menu__tag_active {
+    background-color: $color-background-container;
+    color: $color-text-light;
 }
