--- a/coffee-house/src/sass/layout/_menu-section.scss
+++ b/coffee-house/src/sass/layout/_menu-section.scss
@@ -58,3 +58,39 @@
     background-color: $color-background-container;
     color: $color-text-light;
 }
+
+.menu__tea-category {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+.menu__food-item {
+    width: 310px;
+    border: 1px solid $color-border-light;
+    border-radius: 40px;
+}
+.menu__item-img {
+    display: block;
+    border-radius: 40px;
+
+    width: 100%;
+    height: auto;
+}
+.menu__item-description {
+    padding: 20px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+.menu__item-name {
+    @include font($size: 2.4rem, $weight: 600, $line-height: 125%);
+}
+.menu__item-about {
+    @include font($size: 1.6rem, $weight: 400, $line-height: 150%);
+    text-align: left;
+}
+.menu__item-price {
+    @include font($size: 2.4rem, $weight: 600, $line-height: 125%);
+}
