--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -420,7 +420,7 @@ template {
   max-width: 1360px;
   padding: 100px;
   border-radius: 40px;
-  background-image: url("/assets/img/img-enjoy.jpg");
+  background-image: url("/assets/jpg/img-enjoy.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
@@ -481,7 +481,7 @@ template {
 }
 
 .about__container-img-item:nth-child(1) {
-  background-image: url("/assets/img/about-1.jpg");
+  background-image: url("/assets/jpg/about-1.jpg");
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
@@ -489,7 +489,7 @@ template {
 }
 
 .about__container-img-item:nth-child(2) {
-  background-image: url("/assets/img/about-2.jpg");
+  background-image: url("/assets/jpg/about-2.jpg");
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 5;
@@ -497,7 +497,7 @@ template {
 }
 
 .about__container-img-item:nth-child(3) {
-  background-image: url("/assets/img/about-3.jpg");
+  background-image: url("/assets/jpg/about-3.jpg");
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 1;
@@ -505,7 +505,7 @@ template {
 }
 
 .about__container-img-item:nth-child(4) {
-  background-image: url("/assets/img/about-4.jpg");
+  background-image: url("/assets/jpg/about-4.jpg");
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 4;
@@ -621,6 +621,7 @@ template {
 
 .main-menu {
   flex: 1;
+  margin-bottom: 100px;
 }
 
 .menu h1 {
@@ -720,6 +721,7 @@ template {
   font-weight: 400;
   line-height: 150%;
   text-align: left;
+  height: 72px;
 }
 
 .menu__item-price {
