--- a/coffee-house/src/sass/layout/_menu-section.scss
+++ b/coffee-house/src/sass/layout/_menu-section.scss
@@ -1,5 +1,7 @@
 .main-menu {
     flex: 1;
+
+    margin-bottom: 100px;
 }
 
 .menu h1 {
@@ -90,6 +92,7 @@
 .menu__item-about {
     @include font($size: 1.6rem, $weight: 400, $line-height: 150%);
     text-align: left;
+    height: 72px;
 }
 .menu__item-price {
     @include font($size: 2.4rem, $weight: 600, $line-height: 125%);
