--- a/coffee-house/src/sass/layout/_header.scss
+++ b/coffee-house/src/sass/layout/_header.scss
@@ -31,3 +31,7 @@
     color: $color-text-dark;
     @include font($size: 1.6rem, $weight: 600, $line-height: 150%);
 }
+
+.header__logo {
+    display: block;
+}
