--- a/coffee-house/src/sass/components/_navigation.scss
+++ b/coffee-house/src/sass/components/_navigation.scss
@@ -11,6 +11,15 @@
 
 .navigation__link {
     display: block;
+
+    position: relative;
+
+    &::before {
+        @extend %hover-link;
+    }
+    &:hover::before {
+        @extend %before-hover-link;
+    }
 }
 
 .navigation__link a {
