--- a/coffee-house/src/sass/components/_carousel.scss
+++ b/coffee-house/src/sass/components/_carousel.scss
@@ -4,11 +4,9 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     // align-items: center;
     gap: 50px;
-}
-.carousel__slide {
-    display: block;
 }
 .carousel__container {
     flex-grow: 1;
