--- a/coffee-house/src/sass/layout/_about.scss
+++ b/coffee-house/src/sass/layout/_about.scss
@@ -19,8 +19,12 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
-
     border-radius: 20px;
+    background-size: 100%;
+    transition: background-size 1s;
+}
+.about__container-img-item:hover {
+    background-size: 110%;
 }
 .about__container-img-item:nth-child(1) {
     background-image: url('/assets/jpg/about-1.jpg');
