--- a/coffee-house/src/sass/abstracts/_placeholders.scss
+++ b/coffee-house/src/sass/abstracts/_placeholders.scss
@@ -27,3 +27,29 @@
 
     opacity: 1;
 }
+
+%hover-link-footer {
+    content: '';
+    position: absolute;
+
+    bottom: -5px;
+    left: 50%;
+
+    transform: translateX(-50%);
+
+    width: 0;
+    height: 2px;
+
+    background-color: #E1D4C9; /*?*/
+
+    transition: 1s;
+
+    opacity: 0;
+}
+
+%before-hover-link-footer {
+    width: 100%;
+    transition: 1s;
+
+    opacity: 1;
+}
