--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -789,6 +789,12 @@ template {
   width: 310px;
   border: 1px solid #C1B6AD;
   border-radius: 40px;
+  cursor: pointer;
+}
+
+.menu__item-img-wrapper {
+  overflow: hidden;
+  border-radius: 40px;
 }
 
 .menu__item-img {
@@ -796,6 +802,12 @@ template {
   border-radius: 40px;
   width: 100%;
   height: auto;
+  transition: 1s;
+}
+
+.menu__food-item:hover .menu__item-img {
+  transition: 1s;
+  transform: scale(1.1);
 }
 
 .menu__item-description {
