fix: fix issues after validation check

--- a/coffee-house/src/sass/layout/_enjoy.scss
+++ b/coffee-house/src/sass/layout/_enjoy.scss
@@ -30,5 +30,8 @@
     color: $color-text-light;
 }
 .enjoy__menu-link-wrapper {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
     text-decoration: none;
 }
