--- a/coffee-house/src/sass/layout/_enjoy.scss
+++ b/coffee-house/src/sass/layout/_enjoy.scss
@@ -5,7 +5,7 @@
 
     border-radius: 40px;
 
-    background-image: url('../../../assets/jpg/img-enjoy.jpg');
+    background-image: url('../../assets/jpg/img-enjoy.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
