--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -568,6 +568,7 @@ template {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 100px;
   margin-bottom: 100px;
 }
