--- a/coffee-house/src/sass/layout/_mobile-app.scss
+++ b/coffee-house/src/sass/layout/_mobile-app.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 100px;
 
     margin-bottom: 100px;
