feat: add new padding into enjoy section

--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -461,7 +461,7 @@ template {
 
 .enjoy {
   max-width: 1360px;
-  padding: 100px;
+  padding: 100px 60px;
   border-radius: 40px;
   background-image: url("../../assets/jpg/img-enjoy.jpg");
   background-repeat: no-repeat;
