--- a/coffee-house/src/sass/components/_buttons.scss
+++ b/coffee-house/src/sass/components/_buttons.scss
@@ -19,6 +19,7 @@
     border-radius: 100px;
 
     cursor: pointer;
+
 }
 
 .button_primary .button_primary-name {
@@ -26,12 +27,21 @@
     right: -10px;
 
     transition: 1s;
+
+    @include media-tablet {
+        right: 0px;
+    }
 }
 
 .button_primary .menu-link__icon {
     opacity: 0;
     transition: 1s;
     visibility: hidden;
+
+    @include media-tablet {
+        visibility: visible;
+        opacity: 1;
+    }
 }
 
 .button_primary:hover .menu-link__icon {
@@ -40,11 +50,18 @@
     visibility: visible;
 }
 
+@include media-tablet {
+    .button_primary .menu-link__icon  {
+        transition: none;
+    }   
+}
+
 .button_primary:hover .button_primary-name {
     right: 0px;
 
     transition: 1s;
 }
+
 
 
 
