feat: add burger icon

--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -1038,4 +1038,29 @@ template {
   background-color: #665F55;
 }
 
+.burger-menu {
+  display: none;
+}
+@media (max-width: 768px) {
+  .burger-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 6px;
+    width: 44px;
+    height: 44px;
+    border: 1px solid #665F55;
+    border-radius: 50%;
+  }
+}
+
+.burger-menu span {
+  display: block;
+  width: 18px;
+  height: 2px;
+  background-color: #665F55;
+  border-radius: 100px;
+}
+
 /*# sourceMappingURL=style.css.map */
