--- a/coffee-house/src/sass/style.scss
+++ b/coffee-house/src/sass/style.scss
@@ -19,3 +19,4 @@
 @import "components/buttons";
 @import "components/carousel";
 @import "components/pagination";
+@import "components/burger-menu";
