--- a/coffee-house/src/sass/layout/_about.scss
+++ b/coffee-house/src/sass/layout/_about.scss
@@ -14,6 +14,12 @@
     gap: 40px;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: minmax(118px, auto);
+
+    @media screen and (max-width: 1230px) {
+        grid-template-columns: 1fr;
+        grid-row-gap: 40px;
+        grid-column-gap: 0px;
+    }
 }
 .about__container-img-item {
     background-repeat: no-repeat;
@@ -21,6 +27,10 @@
     border-radius: 20px;
     background-size: 110%;
     transition: background-size 1s;
+
+    @media screen and (max-width: 1230px) {
+        background-size: 105%;
+    }
 }
 .about__container-img-item:hover {
     background-size: 100%;
@@ -38,6 +48,10 @@
     grid-column-end: 2;
     grid-row-start: 5;
     grid-row-end: 8;
+
+    @media screen and (max-width: 1230px) {
+        display: none;
+    }
 }
 .about__container-img-item:nth-child(3) {
     background-image: url('../../assets/jpg/about-3.jpg');
@@ -45,6 +59,9 @@
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 4;
+    @media screen and (max-width: 1230px) {
+        display: none;
+    }
 }
 .about__container-img-item:nth-child(4) {
     background-image: url('../../assets/jpg/about-4.jpg');
@@ -52,4 +69,11 @@
     grid-column-end: 3;
     grid-row-start: 4;
     grid-row-end: 8;
+
+    @media screen and (max-width: 1230px) {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 5;
+        grid-row-end: 9;
+    }
 }
