--- a/coffee-house/src/sass/layout/_mobile-app.scss
+++ b/coffee-house/src/sass/layout/_mobile-app.scss
@@ -15,6 +15,9 @@
 }
 .mobile-app__img {
     display: block;
+    width: 100%;
+    max-width: 630px;
+    height: auto;
 }
 .mobile-app__describe {
     display: flex;
