--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -675,6 +675,13 @@ template {
   background-color: #665F55;
   border-radius: 40px;
 }
+@media (max-width: 768px) {
+  .footer {
+    padding: 100px 60px;
+    flex-direction: column;
+    gap: 100px;
+  }
+}
 
 .footer-menu {
   flex-shrink: 0;
@@ -703,6 +710,11 @@ template {
 
 .footer__right {
   padding: 32px 0px 28px 0px;
+}
+@media (max-width: 768px) {
+  .footer__right {
+    padding: 0px;
+  }
 }
 
 .footer__header-contact {
