--- a/coffee-house/src/sass/layout/_footer.scss
+++ b/coffee-house/src/sass/layout/_footer.scss
@@ -7,6 +7,12 @@
     background-color: $color-background-container;
 
     border-radius: 40px;
+
+    @include media-tablet {
+        padding: 100px 60px;
+        flex-direction: column;
+        gap: 100px;
+    }
 }
 .footer-menu {
     flex-shrink: 0;
@@ -32,6 +38,10 @@
 }
 .footer__right {
     padding: 32px 0px 28px 0px;
+
+    @include media-tablet {
+        padding: 0px;
+    }
 }
 .footer__header-contact {
     @include font($size: 2.4rem, $weight: 600, $line-height: 125%);
