--- a/coffee-house/src/sass/layout/_menu-section.scss
+++ b/coffee-house/src/sass/layout/_menu-section.scss
@@ -77,6 +77,10 @@
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 40px;
+
+    @include media-tablet {
+        justify-content: center; 
+    }
 }
 .menu__food-item {
     width: 310px;
@@ -85,6 +89,11 @@
     
     cursor: pointer;
 }
+
+.menu__food-item:nth-child(n+5):nth-child(-n+8) {
+    display: none;
+}
+
 .menu__item-img-wrapper {   
     overflow: hidden;
     border-radius: 40px;
