--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -865,8 +865,13 @@ template {
   cursor: pointer;
 }
 
-.menu__food-item:nth-child(n+5):nth-child(-n+8) {
+.menu__refresh-button {
   display: none;
+}
+@media (max-width: 768px) {
+  .menu__refresh-button {
+    display: block;
+  }
 }
 
 .menu__item-img-wrapper {
@@ -883,6 +888,11 @@ template {
   transform: scale(1.1);
 }
 
+@media (max-width: 768px) {
+  .menu__food-item:nth-child(n+5):nth-child(-n+8) {
+    display: none;
+  }
+}
 .menu__food-item:hover .menu__item-img {
   transition: 1s;
   transform: scale(1);
