--- a/coffee-house/src/sass/layout/_menu-section.scss
+++ b/coffee-house/src/sass/layout/_menu-section.scss
@@ -89,11 +89,12 @@
     
     cursor: pointer;
 }
-
-.menu__food-item:nth-child(n+5):nth-child(-n+8) {
+.menu__refresh-button {
     display: none;
+    @include media-tablet {
+        display: block;
+    }
 }
-
 .menu__item-img-wrapper {   
     overflow: hidden;
     border-radius: 40px;
@@ -108,6 +109,11 @@
     transition: 1s;
 
     transform: scale(1.1);
+}
+@include media-tablet {
+    .menu__food-item:nth-child(n+5):nth-child(-n+8) {
+        display: none;
+    }
 }
 .menu__food-item:hover .menu__item-img {
     transition: 1s;
