--- a/coffee-house/src/sass/base/_normalize.scss
+++ b/coffee-house/src/sass/base/_normalize.scss
@@ -37,10 +37,10 @@
    * `article` contexts in Chrome, Firefox, and Safari.
    */
   
-  h1 {
-    font-size: 7.2rem;
-    margin: 0;
-  }
+  // h1 {
+  //   font-size: 7.2rem;
+  //   margin: 0;
+  // }
   
   /* Grouping content
      ========================================================================== */
