feat: add flex-wrap into mobile-app__button-container

--- a/coffee-house/src/sass/layout/_mobile-app.scss
+++ b/coffee-house/src/sass/layout/_mobile-app.scss
@@ -29,6 +29,7 @@
 }
 .mobile-app__button-container {
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
 }
 .mobile-app__button-name-container div:first-child {
