--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -424,6 +424,11 @@ template {
   margin: auto;
   padding: 20px 40px;
 }
+@media (max-width: 700px) {
+  .wrapper {
+    padding: 20px 16px;
+  }
+}
 
 .wrapper-menu {
   display: flex;
