--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -505,6 +505,11 @@ template {
     padding: 100px 60px;
   }
 }
+@media (max-width: 700px) {
+  .enjoy {
+    padding: 60px 16px;
+  }
+}
 
 .enjoy__container {
   display: flex;
