feat: add hide vision for carousel slide

--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -1107,6 +1107,15 @@ template {
   line-height: 125%;
 }
 
+.carousel__slide {
+  display: block;
+}
+@media (max-width: 700px) {
+  .carousel__slide {
+    display: none;
+  }
+}
+
 .pagination {
   display: flex;
   justify-content: center;
