--- a/coffee-house/src/sass/components/_carousel.scss
+++ b/coffee-house/src/sass/components/_carousel.scss
@@ -43,3 +43,10 @@
 .carousel__price-item {
     @include font($size: 2.4rem, $weight: 600, $line-height: 125%);
 }
+.carousel__slide {
+    display: block;
+
+    @include media-mobilesmall {
+        display: none;
+    }
+}
