--- a/coffee-house/src/sass/layout/_mobile-app.scss
+++ b/coffee-house/src/sass/layout/_mobile-app.scss
@@ -9,6 +9,10 @@
     @media screen and (max-width: 1230px) {
         flex-wrap: wrap;
     }
+
+    @include media-mobilesmall {
+        gap: 40px;
+    }
 }
 .mobile-app h2 {
     text-align: left;
