--- a/coffee-house/src/sass/layout/_wrapper.scss
+++ b/coffee-house/src/sass/layout/_wrapper.scss
@@ -4,7 +4,7 @@
     padding: 20px 40px;
 
     @include media-mobilesmall {
-        padding: 20px 16px;
+        padding: 20px 16px 40px;
     }
 }
 
