--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -832,6 +832,14 @@ template {
   font-weight: 600;
   line-height: 125%;
 }
+@media (max-width: 700px) {
+  .menu h1 {
+    font-size: 3.2rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 125%;
+  }
+}
 
 .menu {
   display: flex;
@@ -844,6 +852,11 @@ template {
   justify-content: center;
   align-items: center;
   gap: 16px;
+}
+@media (max-width: 700px) {
+  .menu__tags-container {
+    gap: 8px;
+  }
 }
 
 .menu__tag {
