--- a/coffee-house/src/sass/layout/_menu-section.scss
+++ b/coffee-house/src/sass/layout/_menu-section.scss
@@ -9,6 +9,10 @@
     text-align: center;
 
     @include font($size: 6rem, $weight: 600, $line-height: 125%);
+
+    @include media-mobilesmall {
+        @include font($size: 3.2rem, $weight: 600, $line-height: 125%);
+    }
 }
 
 .menu {
@@ -22,6 +26,10 @@
     justify-content: center;
     align-items: center;
     gap: 16px;
+
+    @include media-mobilesmall {
+        gap: 8px;
+    }
 }
 
 .menu__tag {
