--- a/coffee-house/src/sass/components/_carousel.scss
+++ b/coffee-house/src/sass/components/_carousel.scss
@@ -27,7 +27,9 @@
 
     margin-bottom: 20px;
 
-    width: 100%;
+    @include media-mobilesmall {
+        width: 100%;
+    }
 }
 .carousel__describe {
     display: flex;
