--- a/coffee-house/src/css/style.css
+++ b/coffee-house/src/css/style.css
@@ -586,15 +586,16 @@ template {
   }
 }
 
-.about__container-img-item:hover {
-  background-size: 100%;
+@media (hover: hover) {
+  .about__container-img-item:hover {
+    background-size: 100%;
+  }
 }
-@media (max-width: 700px) {
+@media (hover: hover) and (max-width: 700px) {
   .about__container-img-item:hover {
     background-size: 210%;
   }
 }
-
 .about__container-img-item:nth-child(1) {
   background-image: url("../../assets/jpg/about-1.jpg");
   grid-column-start: 1;
@@ -806,17 +807,19 @@ template {
   fill: transparent;
   transition: 1s;
 }
-.footer__social-icon:hover {
-  transition: 1s;
-  fill: #E1D4C9;
-}
-.footer__social-icon path {
-  transition: 1s;
-  stroke: #E1D4C9;
-}
-.footer__social-icon:hover path {
-  transition: 1s;
-  stroke: #403F3D;
+@media (hover: hover) {
+  .footer__social-icon:hover {
+    transition: 1s;
+    fill: #E1D4C9;
+  }
+  .footer__social-icon path {
+    transition: 1s;
+    stroke: #E1D4C9;
+  }
+  .footer__social-icon:hover path {
+    transition: 1s;
+    stroke: #403F3D;
+  }
 }
 
 .main-menu {
@@ -1075,19 +1078,21 @@ template {
   transition: background-color 1s;
   cursor: pointer;
 }
-.button_app:hover {
-  background-color: #665F55;
-}
-.button_app:hover .mobile-app__button-name-container {
-  transition: 1s;
-  color: #E1D4C9;
-}
-.button_app path {
-  transition: 1s;
-}
-.button_app:hover path {
-  transition: 1s;
-  fill: #E1D4C9;
+@media (hover: hover) {
+  .button_app:hover {
+    background-color: #665F55;
+  }
+  .button_app:hover .mobile-app__button-name-container {
+    transition: 1s;
+    color: #E1D4C9;
+  }
+  .button_app path {
+    transition: 1s;
+  }
+  .button_app:hover path {
+    transition: 1s;
+    fill: #E1D4C9;
+  }
 }
 
 .carousel {
